# libbarrett_ros

./: CMakeLists.txt  libbarrett_ros.rosinstall  package.xml
config/: proficio_config.yaml  proficio_left_config.yaml  proficio_left_joint_action_trajectory_controller.yaml  proficio_right_config.yaml  proficio_right_joint_action_trajectory_controller.yaml  wam_config.yaml
include/: barrett_arm.h  barrett_hand.h  wam_control.h
launch/: libbarrett_ros.launch  proficio_control.launch  proficio_left_control.launch  proficio_right_control.launch  wam_control.launch
src/: barrett_arm.cpp  hand.cpp  libbarrett_ros.cpp
