<?xml version="1.0"?>
<package>
  <name>libbarrett_ros</name>
  <version>0.0.0</version>
  <description>The libbarrett_ros package</description>

  <maintainer email="hm@barrett.com">robot</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>wam_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>bullet</build_depend>
  <build_depend>tf</build_depend>
  <!-- build_depend>ros_control</build_depend -->
  <!-- run_depend>ros_control</run_depend -->
  <run_depend>tf</run_depend>
  <run_depend>bullet</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>wam_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>

</package>
